2006-02-08 [colin]	2.0.0cvs34

	* src/compose.c
	* src/procmime.c
	* src/procmime.h
		Fix bug #905 (damaged attachment)
		text files with raw \0's aren't really text files

2006-02-08 [colin]	2.0.0cvs33

	* src/summaryview.c
		Fix crasher introduced yesterday

2006-02-08 [wwp]	2.0.0cvs32

	* src/compose.c
	* src/compose.h
		templates enhancement: allow symbols substitutions in To/Cc/Bcc/Subject fields

2006-02-08 [wwp]	2.0.0cvs31

	* src/prefs_template.c
		templates enhancement: allow address completion for Cc and Bcc fields
		(it was currently possible for the To field only)

2006-02-08 [colin]	2.0.0cvs30

	* src/compose.c
		Don't unblock if not blocked
	FOR_STABLE

2006-02-07 [colin]	2.0.0cvs29

	* src/action.c
		Forgot to refresh summaryview

2006-02-07 [colin]	2.0.0cvs28

	* src/action.c
		Freeze/thaw message list and folder list while
		processing %as{} actions 
	* src/compose.c
		Fix auto-wrap disabling after a middle-click
		paste - FOR_STABLE

2006-02-07 [paul]	2.0.0cvs27

	* src/folder.c
		fix freeing of uninitialised pointers
		Thanks to Colin

2006-02-06 [colin]	2.0.0cvs26

	* src/folder.c
		Use g_slist_prepend in potentially big list

2006-02-06 [colin]	2.0.0cvs25

	* src/folder.c
		Completely skip processing if it doesn't 
		exist (faster!)

2006-02-06 [colin]	2.0.0cvs24

	* src/folder.c
	* src/summaryview.c
		Batch filtering in summaryview (from Tools menu)
		and pre/post//-processing too

2006-02-06 [colin]	2.0.0cvs23

	* src/procmsg.h
	* src/filtering.c
		Use a special field for batch filtering instead
		of stepping on deferred execution's toes

2006-02-06 [colin]	2.0.0cvs22

	* src/action.c
	* src/filtering.c
	* src/filtering.h
	* src/folder.c
	* src/summaryview.c
		Fix filtering via menus and actions

2006-02-06 [colin]	2.0.0cvs21

	* src/imap.c
		Put the added file directly to cache if possible (will work
		with next libetpan)
	* src/filtering.c
	* src/filtering.h
	* src/inc.c
	* src/folder.c
	* src/mbox.c
	* src/procmsg.h