@@ -275,7 +275,7 @@ int matcher_parserwrap(void)
 %token MATCHER_COLORLABEL MATCHER_NOT_COLORLABEL
 %token MATCHER_IGNORE_THREAD MATCHER_NOT_IGNORE_THREAD
 %token MATCHER_CHANGE_SCORE MATCHER_SET_SCORE
-%token MATCHER_STOP MATCHER_HIDE
+%token MATCHER_STOP MATCHER_HIDE MATCHER_IGNORE
 
 %start file
 
@@ -1111,6 +1111,10 @@ MATCHER_EXECUTE MATCHER_STRING
 | MATCHER_HIDE
 {
 	action = filteringaction_new(MATCHACTION_HIDE, 0, NULL, 0, 0);
+}
+| MATCHER_IGNORE
+{
+	action = filteringaction_new(MATCHACTION_IGNORE, 0, NULL, 0, 0);
 }
 | MATCHER_STOP
 {
